unpackaged/main/default/objects/User/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Contact ID Text Value</description>
    <label>Contact ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>