unpackaged/main/default/objects/User/fields/Contact_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_Formula__c</fullName>
    <description>Contact ID Formula Field</description>
    <formula>CASESAFEID(ContactId)</formula>
    <label>Contact ID Formula</label>
    <type>Text</type>
</CustomField>