unpackaged/main/default/objects/User/fields/FS_Force_OKTA_Sync__c.field-meta.xml
<CustomField>
    <fullName>FS_Force_OKTA_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if you want to force a sync to OKTA.</inlineHelpText>
    <label>Force OKTA Sync</label>
    <type>Checkbox</type>
</CustomField>