unpackaged/main/default/objects/User/fields/FS_Membership_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Membership_Expiry_Date__c</fullName>
    <description>Expiry date of membership</description>
    <label>Membership Expiry Date</label>
    <type>Date</type>
</CustomField>