unpackaged/main/default/objects/User/fields/FS_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Membership_Type__c</fullName>
    <description>Display Membership Type</description>
    <label>Membership Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>