unpackaged/main/default/objects/User/fields/FS_OKTA_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_OKTA_Status__c</fullName>
    <description>OKTA Status for user creation: Usually Active, or Needs User Verification.</description>
    <inlineHelpText>OKTA Status for user creation: Usually Active, or Needs User Verification.</inlineHelpText>
    <label>OKTA Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>