unpackaged/main/default/objects/User/fields/FS_Public_Profile_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>FS_Public_Profile_Picture_URL__c</fullName>
    <description>This is to help sync the user's public profile photo to the CMS</description>
    <inlineHelpText>This is to help sync the user's public profile photo to the CMS</inlineHelpText>
    <label>Public Profile Picture URL</label>
    <type>Url</type>
</CustomField>