unpackaged/main/default/objects/User/fields/FS_Same_Email_Username__c.field-meta.xml
<CustomField>
    <fullName>FS_Same_Email_Username__c</fullName>
    <formula>Email = Username ||  Contact.OrderApi__Preferred_Email__c = Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FS Same Email Username</label>
    <type>Checkbox</type>
</CustomField>