unpackaged/main/default/objects/User/fields/Okta_ID__c.field-meta.xml
<CustomField>
    <fullName>Okta_ID__c</fullName>
    <label>Okta ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>