unpackaged/main/default/objects/User/listViews/FS_NYSBA_Staff_users.listView-meta.xml
<ListView>
    <fullName>FS_NYSBA_Staff_users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>TIMEZONE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>FS-NYSBA Standard User</value>
    </filters>
    <label>NYSBA-Staff users</label>
    <language>en_US</language>
</ListView>